# download

./: .travis.yml  README.md  travis.sh
etc/: dev-server.sh
installer/salt/: radiasoft-download.sh
installers/beamsim/: radiasoft-download.sh
installers/beamsim-codes/: radiasoft-download.sh
installers/beamsim-jupyter/: radiasoft-download.sh
installers/centos7/: docker-service.sh  home-env.sh  radiasoft-download.sh  vagrant-up.sh
installers/ci-pull-request/: radiasoft-download.sh
installers/code/: codes.sh  radiasoft-download.sh
installers/code-base/: radiasoft-download.sh
installers/code/codes/: common.sh  elegant.sh  genesis.sh  h5py.sh  jspec.sh  mpi4py.sh  opal.sh  pyOPALTools.sh  pygist.sh  pykern.sh  rsbeams.sh  rslinac.sh  sdds.sh  shadow3.sh  srw.sh  synergia.sh  taucmdr.sh  test.sh  trilinos.sh  warp.sh  xraylib.sh
installers/container-build/: radiasoft-download.sh
installers/container-run/: radiasoft-download.sh
installers/container-sirepo-base/: radiasoft-download.sh
installers/epics-area-detector/: radiasoft-download.sh
installers/fedora-23/: radiasoft-download.sh
installers/fedora-dev/: radiasoft-download.sh
installers/fedora-patches/: radiasoft-download.sh
installers/fedora-post/: radiasoft-download.sh
installers/flash-tarball/: radiasoft-download.sh
installers/home/: radiasoft-download.sh
installers/homebrew/: radiasoft-download.sh
installers/init-from-git/: radiasoft-download.sh
installers/jupyter/: radiasoft-download.sh  radiasoft-download.sh-new
installers/ml-python/: radiasoft-download.sh
installers/nersc-dev/: radiasoft-download.sh
installers/nersc-pyenv/: radiasoft-download.sh
installers/nersc-sirepo-update/: radiasoft-download.sh
installers/perl-dev/: radiasoft-download.sh
installers/pyenv/: radiasoft-download.sh
installers/python-ci/: radiasoft-download.sh
installers/radia-dev/: radiasoft-download.sh  rsmake.sh
installers/readthedocs/: radiasoft-download.sh  readthdocs.sh
installers/redhat-base/: radiasoft-download.sh
installers/redhat-dev/: radiasoft-download.sh
installers/redhat-docker/: radiasoft-download.sh
installers/redhat-docker-install/: radiasoft-download.sh
installers/rpm-build/: radiasoft-download.sh  rpm-spec.PL
installers/rpm-code/: .gitignore  README.md  build-rpm.PL  codes.sh  common-test.spec  dev-build-all.sh  dev-build-debug.sh  dev-build.sh  dev-env.sh  dev-install.sh  dev-server.sh  dev-setup.sh  dev-test.sh  dnf-download-all.sh  dnf-download.sh  notes.txt  radiasoft-download.sh  radiasoft.repo  rpm-spec.PL  sample.sh  sample.spec  test-build-rpm.sh
installers/rpm-code/codes/: Forthon.sh  H5hut.sh  amrex.sh  aravis.sh  bluesky.sh  bmad.sh  bnlcrl.sh  boost.sh  cadopenmc.sh  cgal.sh  common-nersc.sh  common-test.sh  common.sh  common_test.sh  elegant.sh  embree.sh  epics-asyn.sh  epics-pvxs.sh  epics-rogue.sh  epics.sh  fenics.sh  flash.sh  fnal_chef.sh  forthon.sh  geant4.sh  genesis.sh  genesis4.sh  graphtool.sh  h5hut.sh  hypre.sh  impactt.sh  impactx.sh  ipykernel.sh  jspec.sh  julia.sh  libgfortran4.sh  libtorch.sh  madness.sh  madx.sh  mantid.sh  (+46 more)
installers/rpm-code/codes/bluesky/: rsbluesky.sh
installers/rpm-code/codes/common_test/: pyenv.txz
installers/rpm-code/codes/mantid/: rsmantid.sh
installers/rpm-code/codes/mlopal/: rs_mlopal.sh
installers/rpm-code/codes/pymesh/: setup.py.patch
installers/rpm-code/codes/shadow3/: CMakeLists.txt  pyproject.toml  source.patch
installers/rpm-emacs/: radiasoft-download.sh
installers/salt/: radiasoft-download.sh
installers/sirepo/: radiasoft-download.sh
installers/sirepo-ci-build/: radiasoft-download.sh
installers/sirepo-dev/: radiasoft-download.sh
installers/slurm-dev/: radiasoft-download.sh
installers/synergia-dev/: radiasoft-download.sh  rsmake.sh
installers/unit-test/: radiasoft-download.sh
installers/vagrant-centos7/: radiasoft-download.sh
installers/vagrant-dev/: radiasoft-download.sh
installers/vagrant-perl-dev/: radiasoft-download.sh
installers/vagrant-rsconf-dev/: radiasoft-download.sh
installers/vagrant-sirepo-dev/: radiasoft-download.sh
installers/warp/: radiasoft-download.sh  warp.sh
